--- a/css/style-index.css
+++ b/css/style-index.css
@@ -4,6 +4,11 @@
     --color3: rgb(160, 18, 167);
     --color4: rgb(119, 33, 116);
     --color5: rgb(109, 38, 114);
+
+    --colorMale: rgba(0, 0, 0, 0.7);
+    --colorFemale: rgba(224, 173, 227,0.7);
+    --colorKids: rgba(186, 222, 136, 0.7);
+    --colorBoxShadow: ;
 }
 
 #hero {
@@ -61,6 +66,11 @@ h2 {
   align-items: flex-end;
 }
 
+a {
+  text-decoration: none;
+}
+
+
 .opcion {
   display: flex;
   font-size: 3rem;
@@ -72,11 +82,6 @@ h2 {
     background-color: var(--color2);
 }
 
-.link1:link, .link1:visited {
-    color: var(--color3);
-    text-decoration:none;
-}
-
 .container {
   height: 70vh;
   display: flex;
@@ -84,12 +89,30 @@ h2 {
   text-align: center;
   justify-content: center;
   align-items: center;
+  gap: 50px;
 }
 
 .categoria {
   display: flex;
   flex-direction: column;
+  transition: 0.3s;
+}
+
+.categoria:hover {
+  box-shadow: 0px 0px 40px 5px var(--colorBoxShadow);
+}
+
+#categoria-hombre:hover {
   
+  box-shadow: 0px 0px 40px 9px var(--colorMale);
+}
+
+#categoria-mujer:hover {
+  --colorBoxShadow: var(--colorFemale)
+}
+
+#categoria-niños:hover {
+  --colorBoxShadow: var(--colorKids)
 }
 
 .foto {
@@ -101,7 +124,7 @@ h2 {
 img {
   width: 350px;
   height: 350px;
-  transition-duration: 0.3s; 
+  transition: 0.3s; 
 }
 
 .categoria:hover img {
