--- a/css/style-index.css
+++ b/css/style-index.css
@@ -7,12 +7,13 @@
 
     --colorMale: rgba(0, 0, 0, 0.7);
     --colorFemale: rgba(224, 173, 227,0.7);
-    --colorKids: rgba(186, 222, 136, 0.7);
+    --colorKids: rgba(164, 157, 157, 0.7);
     --colorBoxShadow: ;
 }
 
 #hero {
-  border-top: 1px solid rgb(230, 224, 224) ;
+  border-top: 1px solid rgb(230, 224, 224);
+  border-bottom: 2px solid black;
   background-image: linear-gradient(0deg, rgba(0,0,0,1), rgba(0,0,0,0.4)),url('../src/background/main.jpg');
   background-size: cover;
   background-repeat: no-repeat;
@@ -37,8 +38,10 @@ p {
   font-size: 1.6em;
 }
 
-h2 {
-  font-size: 2em;
+h1 {
+  text-align: center;
+  color: var(--color1);
+  font-size: 5em;
 }
 
 .menu {
@@ -73,9 +76,10 @@ a {
 
 .opcion {
   display: flex;
-  font-size: 3rem;
+  font-size: 4rem;
   margin-bottom: 2px;
   padding: 0.2em 1.2em;
+  transition: 0.5s;
 }
 
 .opcion:hover {
@@ -83,7 +87,7 @@ a {
 }
 
 .container {
-  height: 70vh;
+  flex-wrap: wrap;
   display: flex;
   flex-direction: row;
   text-align: center;
@@ -93,9 +97,7 @@ a {
 }
 
 .categoria {
-  display: flex;
-  flex-direction: column;
-  transition: 0.3s;
+  transition: 0.3s ease;
 }
 
 .categoria:hover {
@@ -108,7 +110,9 @@ a {
 }
 
 #categoria-mujer:hover {
-  --colorBoxShadow: var(--colorFemale)
+  
+    box-shadow: -7px 0px 40px -4px rgba(19, 162, 228,0.7), 7px 0px 40px -4px rgb(254, 98, 230);
+   
 }
 
 #categoria-niños:hover {
@@ -131,147 +135,10 @@ img {
   transform: scale(1.05);
 }
 
-
 .descripcion {
-  
-  background-color: white;
+  background-color: rgb(254, 253, 252);
   color:black;
   height: 35px;
-  /*background: linear-gradient(0deg, rgba(109, 38, 114,0.8),rgba(109, 38, 114,0.1))*/
-  
-  /*background: linear-gradient(0deg, rgba(var(--color5),0.1),rgba(var(--color5),1)) */
 }
-
-
-
 
 /* ------------------------------------ */
-
-card {
-    border: 4px solid black;
-}
-card:hover {
-    transform: rotateY(180);
-}
-
-.card {
-    overflow: visible;
-    width: 190px;
-    height: 254px;
-  }
-  
-  .content {
-    width: 100%;
-    height: 100%;
-    transform-style: preserve-3d;
-    transition: transform 300ms;
-    box-shadow: 0px 0px 10px 1px #000000ee;
-    border-radius: 5px;
-  }
-  
-  .front, .back {
-    background-color: #151515;
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    backface-visibility: hidden;
-    -webkit-backface-visibility: hidden;
-    border-radius: 5px;
-    overflow: hidden;
-  }
-  
-  .back {
-    width: 100%;
-    height: 100%;
-    justify-content: center;
-    display: flex;
-    align-items: center;
-    overflow: hidden;
-  }
-  
-
-  .back-content {
-    position: absolute;
-    width: 99%;
-    height: 99%;
-    background-color: #151515;
-    border-radius: 5px;
-    color: white;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    gap: 30px;
-  }
-  
-  .card:hover .content {
-    transform: rotateY(180deg);
-  }
-  
-
-  .front {
-    transform: rotateY(180deg);
-    color: white;
-  }
-  
-  .front .front-content {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    padding: 10px;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-  }
-  
-  .front-content .badge {
-    background-color: #00000055;
-    padding: 2px 10px;
-    border-radius: 10px;
-    backdrop-filter: blur(2px);
-    width: fit-content;
-  }
-  
-  .description {
-    box-shadow: 0px 0px 10px 5px #00000088;
-    width: 100%;
-    padding: 10px;
-    background-color: #00000099;
-    backdrop-filter: blur(5px);
-    border-radius: 5px;
-  }
-  
-  .title {
-    font-size: 11px;
-    max-width: 100%;
-    display: flex;
-    justify-content: space-between;
-  }
-  
-  .title p {
-    width: 50%;
-  }
-  
-  .card-footer {
-    color: #ffffff88;
-    margin-top: 5px;
-    font-size: 8px;
-  }
-  
-  .front .img {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    object-position: center;
-  }
-  
-  .circle {
-    width: 90px;
-    height: 90px;
-    border-radius: 50%;
-    background-color: #ffbb66;
-    position: relative;
-    filter: blur(15px);
-    animation: floating 2600ms infinite linear;
-  }
