--- a/css/style-catalogo.css
+++ b/css/style-catalogo.css
@@ -34,9 +34,9 @@
    background-color: rgba(223, 223, 223, 0.9)
 }
 
-
 .producto:hover img {
     transform: scale(1.05);
+    border-radius: 30px 30px 0px 0px;
 }
 
 .descripcion {
@@ -48,6 +48,16 @@
     font-size: 1.5em;
 }
 
+section {
+    padding-bottom: 10vh;
+}
+
+footer {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: .5vh;
+}
 
 
 
