--- a/css/style-index.css
+++ b/css/style-index.css
@@ -22,6 +22,18 @@
   object-fit: cover;
 }
 
+section h1 {
+  padding: 20px;
+  background: rgba(255, 255, 255, 0.5);
+  border-radius: 10px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+}
+
+section h1:hover {
+  color: white;
+  text-shadow: 2px 2px 4px rgba(255, 255, 255, 0.8);
+}
+
 body {
   font-family: 'Nixie One';
   margin: 0;
@@ -81,13 +93,13 @@ a {
   margin-bottom: 2px;
   padding: 0.2em 1.2em;
   transition: 0.5s;
+  border-radius: 30px;
 }
 
 .opcion:hover {
     background-color: var(--color2);
     color: var(--color1);
 }
-
 
 
 .container {
@@ -127,6 +139,7 @@ a {
   width: 350px;
   height: 350px;
   overflow: hidden;
+  border-radius: 30px 30px 0px 0px;
 }
 
 img {
@@ -147,4 +160,15 @@ img {
 
 .link1:link, .link1:visited {
   color: var(--color3)
+}
+
+p:hover {
+  font-weight: bold;
+}
+
+footer {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: .5vh;
 }
